<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <TextView
        android:id="@+id/resetCountText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/reset"
        android:textColor="@color/white"
        android:textSize="@dimen/NumberSize"
        android:clickable="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/autoMode_layout"
        android:layout_below="@+id/resetCountText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/autoModeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auto_mode"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:textSize="@dimen/TextSize"
            android:gravity="center_vertical" />


            <CheckBox
                android:id="@+id/autoModeCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:buttonTint="@color/white" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/leftyMode_layout"
        android:layout_below="@+id/autoMode_layout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/leftyModeText"
            android:text="@string/leftyMode"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textSize="@dimen/TextSize"/>

        <CheckBox
            android:id="@+id/leftyModeCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:buttonTint="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/foulCount_layout"
        android:layout_below="@+id/leftyMode_layout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <TextView
            android:id="@+id/foulText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_of_foul"
            android:textColor="@color/white"
            android:textSize="@dimen/TextSize"
            android:paddingTop="10dp"
            android:paddingBottom="10dp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/fouls3Radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/white"
                android:text="@string/threeFouls"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/fouls4Radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/white"
                android:text="@string/fourFouls"
                android:textColor="@color/white" />

        </RadioGroup>

    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="5sp">
    </com.google.android.gms.ads.AdView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Feedback"
        android:id="@+id/feedbackButton"
        android:layout_below="@+id/foulCount_layout"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/NumberSize"
        android:textColor="@color/white"/>


</RelativeLayout>