<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white"
                android:text="@string/app_name"
                android:id="@+id/nameTextView"
                android:layout_weight="15"
                android:textSize="@dimen/TextSize"
                android:layout_marginLeft="5dp" />

            <ImageButton
                android:id="@+id/settingButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:padding="10dp"
                android:src="@drawable/settings_button"
                android:contentDescription="@string/settings"
                android:baselineAlignBottom="false"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/inner_border">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/team1Name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:longClickable="true"
                android:text="Team 1"
                android:textColor="@color/red"
                android:textStyle="bold"
                android:textSize="@dimen/TextSize" />

            <TextView
                android:id="@+id/team2Name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:longClickable="true"
                android:text="Team 2"
                android:textColor="@color/blue"
                android:textStyle="bold"
                android:textSize="@dimen/TextSize" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/team1Score"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:numeric="integer"
                android:text="0"
                android:textAlignment="gravity"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white"
                android:textSize="@dimen/NumberSize" />

            <TextView
                android:id="@+id/team2Score"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:numeric="integer"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:text="0"
                android:textAlignment="gravity"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white"
                android:textSize="@dimen/NumberSize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:paddingBottom="10sp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/team1ScoreMinus"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:src="@drawable/minus_button"
                    android:scaleType="fitCenter"
                    android:layout_marginRight="15dp" />

                <ImageButton
                    android:id="@+id/team1ScorePlus"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:src="@drawable/plus_button"
                    android:scaleType="fitCenter"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/team2ScoreMinus"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:src="@drawable/minus_button"
                    android:scaleType="fitCenter"/>

                <ImageButton
                    android:id="@+id/team2ScorePlus"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:src="@drawable/plus_button"
                    android:scaleType="fitCenter"
                    android:layout_marginLeft="15dp" />
            </LinearLayout>

        </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:background="@drawable/count_border">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/ballButtonMinus"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="-"
                    android:textSize="@dimen/TextSize" />

                <Button
                    android:id="@+id/strikeButtonMinus"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="-"
                    android:textSize="@dimen/TextSize" />

                <Button
                    android:id="@+id/foulButtonMinus"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="-"
                    android:textSize="@dimen/TextSize" />

                <Button
                    android:id="@+id/outButtonMinus"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="-"
                    android:textSize="@dimen/TextSize" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="209dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:orientation="vertical">

                <Button
                    android:id="@+id/ballButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="BALL"
                    android:textSize="@dimen/TextSize"
                    android:textStyle="bold"
                    />

                <Button
                    android:id="@+id/strikeButton"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="STRIKE"
                    android:textSize="@dimen/TextSize"
                    android:textStyle="bold"/>

                <Button
                    android:id="@+id/foulButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHighlight="@color/black"
                    android:layout_weight="1"
                    android:text="FOUL"
                    android:textSize="@dimen/TextSize"
                    android:textStyle="bold"/>

                <Button
                    android:id="@+id/outButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="OUT"
                    android:textSize="@dimen/TextSize"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="30"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/ballText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    android:elegantTextHeight="false"
                    android:gravity="center"
                    android:numeric="integer"
                    android:text="0"
                    android:textAlignment="gravity"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/white"
                    android:textSize="@dimen/NumberSize" />

                <TextView
                    android:id="@+id/strikeText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    android:elegantTextHeight="false"
                    android:gravity="center"
                    android:numeric="integer"
                    android:text="0"
                    android:textAlignment="gravity"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/white"
                    android:textSize="@dimen/NumberSize" />

                <TextView
                    android:id="@+id/foulText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_weight="1"
                    android:elegantTextHeight="false"
                    android:gravity="center"
                    android:numeric="integer"
                    android:text="0"
                    android:textAlignment="gravity"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/white"
                    android:textSize="@dimen/NumberSize" />

                <TextView
                    android:id="@+id/outText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:elegantTextHeight="false"
                    android:gravity="center"
                    android:numeric="integer"
                    android:text="0"
                    android:textAlignment="gravity"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/white"
                    android:textSize="@dimen/NumberSize" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/count_border">

            <Button
                android:id="@+id/inningMinusButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="-"
                android:textSize="@dimen/TextSize" />

            <TextView
                android:id="@+id/inningText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center"
                android:text="TOP 1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white"
                android:textSize="@dimen/TextSize" />

            <Button
                android:id="@+id/inningPlusButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="+"
                android:textSize="@dimen/TextSize" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="7"
        android:background="@drawable/count_border">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id"
            android:paddingTop="7dp"
            android:layout_gravity="center_horizontal|right">
        </com.google.android.gms.ads.AdView>
    </LinearLayout>

</LinearLayout>

